# wops

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/wops-app/: Cargo.toml
crates/wops-app/src/: app.rs  logging.rs  main.rs
crates/wops-app/src/app/: capture.rs  controls.rs  dock.rs  header.rs  icons.rs  preview.rs  settings.rs  status_bar.rs  theme.rs  widgets.rs
crates/wops-capture/: Cargo.toml
crates/wops-capture/examples/: portal_probe.rs
crates/wops-capture/src/: convert.rs  frame.rs  lib.rs  pool.rs  portal.rs  source.rs  webcam.rs
crates/wops-core/: Cargo.toml
crates/wops-core/src/: config.rs  lib.rs  protocol.rs  state.rs
crates/wops-render/: Cargo.toml
crates/wops-render/src/: compositor.rs  compositor.wgsl  lib.rs  source.rs  transform.rs
scripts/: bootstrap-fedora.sh
