[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
directories = "6"
eframe = { version = "0.35", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "persistence",
    "wayland",
    "wgpu",
    "x11",
] }
egui = "0.35"
egui_extras = { version = "0.35", features = ["svg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
