[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
ashpd = { version = "0.13", default-features = false, features = ["async-io", "screencast"] }
bytemuck = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
directories = "6"
eframe = { version = "0.35", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "persistence",
    "wayland",
    "wgpu",
    "x11",
] }
egui = "0.35"
egui_extras = { version = "0.35", features = ["svg"] }
futures-lite = "2"
glam = { version = "0.30", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
pipewire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "29"
v4l = "0.14"
