[package]
name = "wops-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wops-core = { path = "../wops-core" }
