[package]
name = "wops-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
glam.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wops-core = { path = "../wops-core" }
wops-capture = { path = "../wops-capture" }
wops-render = { path = "../wops-render" }
